--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,9 @@
     "new-article": "node scripts/newArticle.js",
     "list-articles": "node scripts/listArticles.js",
     "edit-article": "node scripts/editArticle.js",
-    "test:venue": "node scripts/testVenueCreation.js"
+    "test:venue": "node scripts/testVenueCreation.js",
+    "dev": "nodemon server.js",
+    "build": "npm install --production"
   },
   "keywords": [],
   "author": "",
@@ -20,7 +22,7 @@
     "cors": "^2.8.5",
     "csv-parse": "^5.6.0",
     "dotenv": "^16.4.5",
-    "express": "^4.21.1",
+    "express": "^4.21.2",
     "gray-matter": "^4.0.3",
     "marked": "^15.0.0",
     "mongodb": "^6.10.0",
@@ -32,5 +34,8 @@
   "description": "",
   "devDependencies": {
     "nodemon": "^3.1.7"
+  },
+  "engines": {
+    "node": ">=16.20.1"
   }
 }
