fix: add domain redirects to vercel.json

--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -4,5 +4,12 @@
         "source": "/(.*)",
         "destination": "/index.html"
       }
+    ],
+    "redirects": [
+      {
+        "source": "https://retr.it/:path*",
+        "destination": "https://www.retr.it/:path*",
+        "permanent": true
+      }
     ]
-  }
+}
